--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Misc
+#-----
+.DS_Store
+
+# Eclipse
+# -------
+*.classpath
+*.project
+*.settings
+/bin
