--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,51 @@
-.gradle
-/build/
+# Gradle
+.gradle/
+build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-
-# Misc
-#-----
-.DS_Store
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
 
 # Eclipse
-# -------
-*.classpath
-*.project
-*.settings
-/bin
+.project
+.classpath
+.settings/
+
+# VS Code
+.vscode/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+
+# Logs
+*.log
+
+# Local config
+local.properties
+.env
+
+# ZAP add-on artifact
+build/zapAddOn/bin/*.zap
+
+# Temporary files
+*.tmp
+*~
+
+# Coverage
+coverage/
+
+# Generated files
+/.gradle/
+
+# Lock files
+gradle.lockfile
